--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link rel="text/css" href="../node_modules/bootstrap/dist/css/bootstrap.css" />
+    <!-- <link rel="style" href="../node_modules/bootstrap/dist/css/bootstrap.css" /> -->
     <title>React App</title>
   </head>
   <body>
